# sterces-cli

./: .bumpversion.cfg  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  USAGE.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/: conf.py  index.rst
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: code.rst  usage.rst
sterces_cli/: __init__.py  app.py  cli.py  constants.py  foos.py
sterces_cli/entries/: __init__.py  commands.py
sterces_cli/groups/: __init__.py  commands.py
tests/: __init__.py  conftest.py  test_cli.py  test_entry_commands.py  test_group_commands.py
